--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "async-catch-loader",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "a webpack loader that captures error of async function",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest  --detectOpenHandles "
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,14 @@
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/parser": "^7.5.0",
+    "@babel/preset-env": "^7.5.2",
     "@babel/traverse": "^7.5.0",
     "@babel/types": "^7.5.0",
-    "loader-utils": "^1.2.3"
+    "babel-jest": "^24.8.0",
+    "babel-polyfill": "^6.26.0",
+    "jest": "^24.8.0",
+    "loader-utils": "^1.2.3",
+    "memory-fs": "^0.4.1",
+    "webpack": "^4.35.3"
   }
 }
