--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "async-catch-loader",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "a webpack loader that captures error of async function",
   "main": "src/index.js",
   "scripts": {
@@ -30,9 +30,15 @@
     "@babel/types": "^7.5.0",
     "babel-jest": "^24.8.0",
     "babel-polyfill": "^6.26.0",
+    "husky": "^3.0.0",
     "jest": "^24.8.0",
     "loader-utils": "^1.2.3",
     "memory-fs": "^0.4.1",
     "webpack": "^4.35.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test"
+    }
   }
 }
