--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "async-catch-loader",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "a webpack loader that captures error of async function",
   "main": "src/index.js",
   "scripts": {
@@ -31,11 +31,14 @@
     "babel-jest": "^24.8.0",
     "babel-polyfill": "^6.26.0",
     "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "husky": "^2.6.0",
     "jest": "^24.8.0",
     "lint-staged": "^9.2.1",
     "loader-utils": "^1.2.3",
     "memory-fs": "^0.4.1",
+    "prettier": "^1.18.2",
     "webpack": "^4.35.3"
   },
   "husky": {
@@ -44,7 +47,7 @@
     }
   },
   "lint-staged": {
-    "src/*.{js}": [
+    "*.{js}": [
       "eslint --fix"
     ]
   }
